tests/predator-regre/test-0223.err
test-0223.c:11:20: note: writing heap graph to 'test-0223.c-11-0000.dot'...
list_add.h:6:24: error: ___sl_error() reached, analysis of this code path will not continue
list_add.h:6:24: note: user message: list_add() misused, node already in
test-0223.c:43:17: note: from call of __checked_list_add()
test-0223.c:33:5: note: from call of main()
list_add.h:6:24: error: ___sl_error() reached, analysis of this code path will not continue
list_add.h:6:24: note: user message: list_add() misused, node already in
test-0223.c:43:17: note: from call of __checked_list_add()
test-0223.c:33:5: note: from call of main()
